# new-smart-belt-proposal

./: .gitignore  .gitmodules  AGENT.md  Cargo.toml  README.md  codebook.toml  flake.nix  impl_outline.md  markdown_numberer.py  rust-toolchain.toml  rustfmt.toml  showcase_blueprint.txt  smart_belt_spec.md  update_plan.md
.config/: nextest.toml
image_renderer/: Cargo.toml  README.md
image_renderer/src/: lib.rs  main.rs  tilemaps.rs
markdown_proc/: Cargo.toml
markdown_proc/src/: main.rs
prototype_abstract/: Cargo.toml  bacon.toml  build.rs
prototype_abstract/src/: belts.rs  entity.rs  fuzzer.rs  geometry.rs  lib.rs  test_case.rs  world.rs
prototype_abstract/src/smart_belt/: action.rs  belt_curving.rs  drag.rs  drag_direction.rs  drag_logic.rs  drag_logic_alt.rs  drag_state.rs  drag_state_impl.rs  drag_step.rs  implicit_drag_state.rs  mod.rs  straight_line_drag.rs  tile_classification.rs  world_view.rs
prototype_abstract/src/test/: mod.rs  test_case.rs
prototype_abstract/tests/: fuzzer_test.rs  rotation.rs  suite.rs
prototype_abstract/tests/common/: mod.rs
prototype_mod/: .gitignore  README.md  bacon.toml  blueprint.txt  bunfig.toml  control.ts  data-final-fixes.ts  data-updates.ts  differences.md  factorio-test.json  generate-tests.ts  package.json  progress.md  tsconfig.json
prototype_mod/common/: belt_curving.ts  belt_tiers.ts  belts.ts  entity.ts  geometry.ts  metatable.ts  test_entity.ts  world.ts
prototype_mod/common/smart_belt/: DragDirection.ts  RaySense.ts  action.ts  drag.ts  drag_state.ts  index.ts  tile_classification.ts  tile_history_view.ts  world_view.ts
prototype_mod/mod/: changelog.txt  info.json  mod-readme.md  tsconfig.json
prototype_mod/mod-scripts/: build_mode.ts  cursor_manager.ts  debugPrint.ts  event_handler.ts  prototypes.ts  real_world.ts  world.ts
prototype_mod/mod-tests/: belts_test.ts  build_mode_action_test.ts  build_mode_test.ts  geometry_test.ts  init_tests.ts  rotation_test.ts  test_helpers.ts
prototype_mod/mod/scenarios/Smarter belt tests/locale/en/: en.cfg
prototype_mod/scripts/: generate-blueprint.ts  generate-factorio-tests.ts  generate-tests.ts  rotation.test.ts  simulated_world.ts  test-utils.ts  test_case.ts
prototype_mod/src/: belts.test.ts  belts.ts  geometry.test.ts  run_test_suite.ts  simulated_world.ts  test_case.ts  world.test.ts  world.ts
prototype_mod/src/smart_belt/: action.ts  belt_curving.ts  drag.ts  drag_state.ts  index.ts  tile_classification.ts  world_view.ts
prototype_mod/ts-only/: belt_tiers.ts  belts.test.ts  geometry.test.ts  simulated_world.ts  test-utils.ts  test_case.ts  tsconfig.json  world.test.ts
protoype_abstract/: Cargo.toml
protoype_abstract/src/: entity.rs  geometry.rs  lib.rs  straight_line_drag.rs  world.rs  world_view.rs
protoype_abstract/src/smart_belt/: mod.rs  straight_line_drag.rs  world_view.rs
protoype_abstract/src/test/: mod.rs
spec_src/: compile.sh  spec.md
test_suite/: basic_tests.yaml  belt_obstacle_1.yaml  belt_obstacle_simple.yaml  belt_obstacles.yaml  belt_segments.yaml  belt_weaving.yaml  belts.yaml  curved_belts.yaml  error_recovery.yaml  forward_back.yaml  found_by_fuzzer.yaml  from_spec.yaml  impassable_tile.yaml  loaders.yaml  obstacles.yaml  regressions.yaml  splitters.yaml  underground_belts.yaml
test_suite/mod_only/: build_mode_force.yaml  build_mode_ghost.yaml  build_mode_superforce.yaml  infrastructure_smoke.yaml
