[workspace]
resolver= "3"
members = [
    "./prototype_abstract",
    "./image_renderer",
]

[workspace.dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.47", features = ["derive"] }
comrak = "0.41.0"
dyn-clone = "1.0.20"
dyn-eq = "0.1.3"
euclid = "0.22"
image = "0.25.4"
imageproc = "0.25.0"
itertools = "0.14.0"
pathdiff = "0.2.3"
rusttype = "0.9.3"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
tempfile = "3.8"
