[package]
name = "image_renderer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "image_renderer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
comrak.workspace = true
euclid = "0.22"
pathdiff.workspace = true
protoype_abstract = { path = "../prototype_abstract" }
tiny-skia = { version = "0.11.4", features = ["png-format"] }
