[package]
name = "image_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
comrak = "0.41.0"
image = "0.25.8"
pathdiff = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.8"
