[package]
name = "image_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
comrak.workspace = true
pathdiff.workspace = true
protoype_abstract = { path = "../prototype_abstract" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
