[package]
name = "protoype_abstract"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
dyn-clone = "1.0.20"
dyn-eq = "0.1.3"
euclid = "0.22"
serde = { version = "1.0.225", features = ["derive"] }
serde_yaml = "0.9.34"

[build-dependencies]
serde_yaml = "0.9.34"
