[package]
name = "prototype_abstract"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
dyn-clone.workspace = true
dyn-eq.workspace = true
euclid.workspace = true
itertools.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[build-dependencies]
serde.workspace = true
serde_yaml.workspace = true
