[package]
name = "prototype_abstract"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
arrayvec = "0.7.6"
enum_dispatch = "0.3"
euclid.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
env_logger.workspace = true

[build-dependencies]
serde.workspace = true
serde_yaml.workspace = true
